@@ -155,7 +155,11 @@ export(write.nexus.splits)
 export(write.phyDat)
 export(write.splits)
 export(writeDist)
-importFrom(ape,rtree)
+import(Rcpp)
+import(ape)
+import(methods)
+import(parallel)
+importFrom(Matrix,Matrix)
 importFrom(igraph,decompose)
 importFrom(igraph,graph)
 importFrom(igraph,graph_from_adjacency_matrix)
